[package]
name = "enum_pipeline"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_pipeline_derive = {version = "0.1.0", path = "enum_pipeline_derive"}

[workspace]
members = ["enum_pipeline_derive"]
